# Multi_CVC

./: README.md
convex_clustering/: CMakeLists.txt  package.xml
convex_clustering_bringup/: CMakeLists.txt  package.xml  setup.py
convex_clustering_bringup/launch/: gazebo.launch  model.launch  model_main.launch  robots.launch  single_robot.launch
convex_clustering_code/: CMakeLists.txt  package.xml
convex_clustering_code/include/convex_clustering_code/: convex_clustering_code.h
convex_clustering_code/launch/: cluster.launch  merge.launch
convex_clustering_code/msg/: centroid.msg
convex_clustering_code/rviz/: rviz_cluster.rviz
convex_clustering_code/src/: convex_clustering_code.cpp  convex_clustering_code_merge.cpp  convex_clustering_code_node.cpp
convex_clustering_description/: CMakeLists.txt  package.xml
convex_clustering_description/urdf/: base_velodyne.urdf.xacro
convex_clustering_description/worlds/: test3.world  test4.world
curved_clustering/: CMakeLists.txt  package.xml
curved_clustering_bringup/: CMakeLists.txt  package.xml  setup.py
curved_clustering_bringup/launch/: gazebo.launch  model.launch  model_main.launch  robots.launch
curved_clustering_code/: CMakeLists.txt  package.xml
curved_clustering_code/include/curved_clustering_code/: curved_clustering_code.h
curved_clustering_code/launch/: cluster.launch  merge.launch
curved_clustering_code/msg/: centroid_list.msg
curved_clustering_code/src/: convex_clustering_code.cpp  curved_clustering_code_merge.cpp  curved_clustering_code_node.cpp
curved_clustering_description/: CMakeLists.txt  package.xml
curved_clustering_description/urdf/: base_velodyne.gazebo.xacro  base_velodyne.urdf.xacro
curved_clustering_description/worlds/: test1.world  test2.world  test5.world
