<?xml version="1.0"?>
<package format="2">
  <name>curved_clustering_code</name>
  <version>0.0.0</version>
  <description>The curved_clustering_code package</description>
  <maintainer email="linus@todo.todo">linus</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>genmsg</depend>
  <depend>visualization_msgs</depend>
  <export></export>
</package>
